k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flekxitask
  labels:
    app.kubernetes.io/part-of: flekxitask
